Refactor: Remove unused DTOs and security classes
- Deleted several DTO classes including AuthRequest, CreateJournalEntryRequestDTO, CreateResidentRequestDTO, EditJournalEntryRequestDTO, EventDTO, EventTypeDTO, JournalEntryResponseDTO, JwtUserDTO, LinkResidentsRequest, RegisterUserDTO, ResidentResponseDTO, UserDTO.
- Removed security-related classes: ITokenSecurity, TokenCreationException, TokenSecurity, TokenVerificationException.
- Updated EventRoute to simplify endpoint paths.
- Refactored EventMapper, EventTypeMapper, and UserMapper to remove unused methods.
- Added new mapping service tests for entity to map conversions.
- Updated tests to use Map instead of DTOs for requests and responses.